--- a/.github/workflows/hexo-deploy.yml
+++ b/.github/workflows/hexo-deploy.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
+       
+      - name: npm update
+        run: |
+          npm cache clean --force
+          npm install -g npm
 
       - name: Build and Deploy
         uses: theme-keep/hexo-deploy-github-pages-action@master # 使用专门部署 Hexo 到 GitHub pages 的 action
