--- a/.github/workflows/hexo-deploy.yml
+++ b/.github/workflows/hexo-deploy.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           npm cache clean --force
           npm install -g npm
+          npm config set strict-ssl false
 
       - name: Build and Deploy
         uses: theme-keep/hexo-deploy-github-pages-action@master # 使用专门部署 Hexo 到 GitHub pages 的 action
