--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-tag-dplayer": "^0.3.3",
     "hexo-theme-ayer": "^1.8.13",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "upath": "^2.0.1"
   }
 }
