--- a/.github/workflows/hexo-deploy.yml
+++ b/.github/workflows/hexo-deploy.yml
@@ -11,6 +11,24 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Check the current timezone database
+        run: |
+          ls /usr/share/zoneinfo
+          echo "---"
+          date
+          echo "---"
+
+      - name: Add the custom timezone database file
+        run: |
+          sudo mkdir -p /usr/share/zoneinfo/Asia
+          sudo cp /tmp/Asia/Shanghai /usr/share/zoneinfo/Asia/
+          sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+
+      - name: Show the timezone
+        run: |
+          echo "The timezone is $TZ"
+          date
+
       - name: Checkout
         uses: actions/checkout@master
        
