--- a/package.json
+++ b/package.json
@@ -9,12 +9,44 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "5.3.0"
+    "version": "7.1.1"
   },
   "dependencies": {
-    "hexo": "^5.0.0",
-    "hexo-blog-encrypt": "^3.1.4",
+    "acorn": "^8.11.3",
+    "ansi-regex": "^6.0.1",
+    "ansi-styles": "^6.2.1",
+    "anymatch": "^3.1.3",
+    "arr-diff": "^4.0.0",
+    "array-unique": "^0.3.2",
+    "binary-extensions": "^2.2.0",
+    "bindings": "^1.5.0",
+    "braces": "^3.0.2",
+    "browser-fingerprint": "^0.1.0",
+    "camel-case": "^5.0.0",
+    "chalk": "^5.3.0",
+    "cheerio": "^1.0.0-rc.12",
+    "chokidar": "^3.6.0",
+    "color-convert": "^2.0.1",
+    "color-name": "^2.0.0",
+    "core-js": "^3.36.0",
+    "cross-spawn": "^7.0.3",
+    "cuid": "^3.0.0",
+    "debug": "^4.3.4",
+    "define-property": "^2.0.2",
+    "escape-string-regexp": "^5.0.0",
+    "expand-brackets": "^4.0.0",
+    "extend-shallow": "^3.0.2",
+    "extglob": "^3.0.0",
+    "file-uri-to-path": "^2.0.0",
+    "fill-range": "^7.0.1",
+    "glob-parent": "^6.0.2",
+    "has-flag": "^5.0.1",
+    "hexo": "^7.1.1",
+    "hexo-blog-encrypt": "^3.1.9",
+    "hexo-cli": "^4.3.1",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-front-matter": "^4.2.1",
+    "hexo-fs": "^4.1.1",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^1.0.0",
@@ -22,8 +54,10 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-index-pin-top": "^0.2.2",
     "hexo-generator-searchdb": "^1.3.3",
-    "hexo-generator-sitemap": "^2.1.0",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-i18n": "^2.0.0",
+    "hexo-log": "^4.1.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^2.0.0",
@@ -32,6 +66,32 @@
     "hexo-tag-dplayer": "^0.3.3",
     "hexo-theme-ayer": "^1.8.13",
     "hexo-theme-landscape": "^0.0.3",
-    "upath": "^2.0.1"
+    "hexo-util": "^3.2.0",
+    "highlight.js": "^11.9.0",
+    "is-accessor-descriptor": "^3.0.5",
+    "is-binary-path": "^2.1.0",
+    "is-data-descriptor": "^2.1.3",
+    "is-descriptor": "^3.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-plain-object": "^5.0.0",
+    "isobject": "^4.0.0",
+    "kind-of": "^6.0.3",
+    "lower-case": "^3.0.0",
+    "micromatch": "^4.0.5",
+    "ms": "^2.1.3",
+    "nan": "^2.18.0",
+    "no-case": "^4.0.0",
+    "normalize-path": "^3.0.0",
+    "readdirp": "^3.6.0",
+    "strip-ansi": "^7.1.0",
+    "strip-indent": "^4.0.0",
+    "striptags": "^3.2.0",
+    "supports-color": "^9.4.0",
+    "tildify": "^3.0.0",
+    "to-regex-range": "^5.0.1",
+    "upath": "^2.0.1",
+    "warehouse": "^5.0.1",
+    "which": "^4.0.0"
   }
 }
