github action在npm这环节出错了

--- a/.github/workflows/hexo-deploy.yml
+++ b/.github/workflows/hexo-deploy.yml
@@ -23,7 +23,7 @@ jobs:
        
       - name: npm update
         run: |
-          npm cache clean --force
+          npm cache clean
           npm install -g npm
           npm config set strict-ssl false
 
