--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "hexo-i18n": "^2.0.0",
     "hexo-log": "^4.1.0",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^3.0.0",
+    "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
     "hexo-tag-aplayer": "^3.0.4",
